--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
-
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
-
+    <header>
+      <p><a href="index.html">Go back</a></p>
+    </header>
+    <main>
+      <div class="wrapper">
+        <button type="button" data-start>Start</button>
+        <button type="button" data-stop>Stop</button>
+      </div>
+    </main>
     <script src="js/01-color-switcher.js"></script>
   </body>
 </html>
