--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <header>
+      <p><a href="index.html">Go back</a></p>
+    </header>
 
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
