--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <header>
+      <p><a href="index.html">Go back</a></p>
+    </header>
 
     <form class="form">
       <label>
