--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -11,7 +11,7 @@
       <p><a href="index.html">Go back</a></p>
     </header>
     <main>
-      <div class="wrapper">
+      <div class="center">
         <button type="button" data-start>Start</button>
         <button type="button" data-stop>Stop</button>
       </div>
