task1 and task2 markup changes via js

--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -7,36 +7,29 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <header>
-      <p><a href="index.html">Go back</a></p>
-    </header>
-    <main>
-      <div class="center">
-        <div class="wrapper">
-          <input type="text" id="datetime-picker" />
-          <button type="button" data-start disabled>Start</button>
+    <p><a href="index.html">Go back</a></p>
 
-          <div class="timer">
-            <div class="field">
-              <span class="value" data-days>00</span>
-              <span class="label">Days</span>
-            </div>
-            <div class="field">
-              <span class="value" data-hours>00</span>
-              <span class="label">Hours</span>
-            </div>
-            <div class="field">
-              <span class="value" data-minutes>00</span>
-              <span class="label">Minutes</span>
-            </div>
-            <div class="field">
-              <span class="value" data-seconds>00</span>
-              <span class="label">Seconds</span>
-            </div>
-          </div>
-        </div>
+    <input type="text" id="datetime-picker" />
+    <button type="button" data-start>Start</button>
+
+    <div class="timer">
+      <div class="field">
+        <span class="value" data-days>00</span>
+        <span class="label">Days</span>
       </div>
-    </main>
+      <div class="field">
+        <span class="value" data-hours>00</span>
+        <span class="label">Hours</span>
+      </div>
+      <div class="field">
+        <span class="value" data-minutes>00</span>
+        <span class="label">Minutes</span>
+      </div>
+      <div class="field">
+        <span class="value" data-seconds>00</span>
+        <span class="label">Seconds</span>
+      </div>
+    </div>
     <script src="js/02-timer.js"></script>
   </body>
 </html>
